--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.studentschedualerc868">
 
     <application
         android:allowBackup="true"
@@ -12,11 +13,61 @@
         android:theme="@style/Theme.StudentSchedualerC868"
         tools:targetApi="31">
         <activity
+            android:name=".SearchActivity"
+            android:exported="false"
+            android:parentActivityName=".HomeActivity"/>
+        <activity
+            android:name=".EditAssessment"
+            android:exported="false"
+            android:parentActivityName=".DisplayAssessment" />
+        <activity
+            android:name=".EditCourse"
+            android:exported="false"
+            android:parentActivityName=".DisplayCourse" />
+        <activity
+            android:name=".EditTerm"
+            android:exported="false"
+            android:parentActivityName=".DisplayTerm" />
+        <activity
+            android:name=".DisplayAssessment"
+            android:exported="false"
+            android:parentActivityName=".MultiPageActivity" />
+        <activity
+            android:name=".DisplayCourse"
+            android:exported="false"
+            android:parentActivityName=".MultiPageActivity" />
+        <activity
+            android:name=".DisplayTerm"
+            android:exported="false"
+            android:parentActivityName=".MultiPageActivity" />
+        <activity
+            android:name=".AddNewTerm"
+            android:exported="false"
+            android:parentActivityName=".MultiPageActivity" />
+        <activity
+            android:name=".AddNewCourse"
+            android:exported="false"
+            android:parentActivityName=".MultiPageActivity" />
+        <activity
+            android:name=".AddNewAssessment"
+            android:exported="false"
+            android:parentActivityName=".DisplayAssessment" />
+        <activity
+            android:name=".MultiPageActivity"
+            android:exported="false"
+            android:parentActivityName=".HomeActivity" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".SignupActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
