--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ android {
     namespace 'com.example.studentschedualerc868'
     compileSdk 33
 
+
+
     defaultConfig {
         applicationId "com.example.studentschedualerc868"
         minSdk 26
@@ -44,21 +46,24 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'org.testng:testng:6.9.6'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 //    androidTestImplementation 'androidx.test:core:1.4.0'
-    androidTestImplementation 'androidx.test:core:1.5.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
 //    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-core:3.12.2'
     androidTestImplementation 'junit:junit:4.13.2'
 
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.5.0'
 
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
