--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,21 +47,15 @@ dependencies {
     implementation 'org.testng:testng:6.9.6'
     testImplementation 'junit:junit:4.13.2'
 
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'androidx.core:core-ktx:1.6.0' // or the latest version
+
     androidTestImplementation 'androidx.test.ext:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
-//    androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test:core:1.4.0'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-
-//    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.12.2'
     androidTestImplementation 'junit:junit:4.13.2'
-
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.5.0'
@@ -69,19 +63,11 @@ dependencies {
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
-//    Room Database
-//    implementation "androidx.room:room-runtime:2.2.5"
-//    annotationProcessor "androidx.room:room-compiler:2.2.5"
-//    implementation 'androidx.room:room-runtime:2.6.0-alpha01'
-
     implementation 'androidx.room:room-runtime:2.4.3'
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
     testImplementation "androidx.room:room-testing:2.4.3"
 
-//    implementation 'androidx.room:room-runtime:2.4.3'
-//    annotationProcessor 'androidx.room:room-compiler:2.4.3'
-//    testImplementation "androidx.room:room-testing:2.4.3"
-//    testImplementation 'org.mockito:mockito-core:3.12.4'
+    implementation 'com.itextpdf:itext7-core:7.1.16'
 
     configurations.all {
         resolutionStrategy.dependencySubstitution {
