--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.studentschedualerc868">
+    package="com.example.studentschedualerc868"
+    android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    >
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentSchedualerC868"
         tools:targetApi="31">
+
+
         <activity
             android:name=".SearchActivity"
             android:exported="false"
